--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
 "node":"^8.11.3",
 "npm":"^5.6.0",
+
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
@@ -15,7 +16,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+"start":"node app.js"
   },
   "author": "",
   "license": "ISC"
